feat: add recipe
